<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="PluralsCandidate">
    <string name="app_title_kakapo">Kakapo</string>
    <string name="app_title_share_id_with">Share ID with</string>
    <string name="app_action_help">Help</string>
    <string name="app_action_delete">Delete</string>
    <string name="app_action_add_friend">Add friend</string>
    <string name="app_action_ignore_author">Ignore author</string>
    <string name="app_action_ignore_item">Ignore item</string>
    <string name="app_action_more_info">More info</string>
    <string name="app_toast_help_not_found">Error loading help file</string>
    <string name="app_snack_server_unavailable">The server is currently unavailable. Please try again later.</string>
    <string name="app_snack_error_retrofit_io">An error occurred while communicating with the server.</string>
    <string name="app_snack_error_too_many_requests">You have made too many server requests; wait a moment and try again.</string>
    <string name="app_snack_error_other_http">A communication error occurred with the server; please try again.</string>
    <string name="app_snack_error_bad_request">A communication error occurred with the server; please try again.</string>
    <string name="app_snack_error_unauthorized">The supplied credentials are not valid; please sign in again.</string>
    <string name="app_snack_error_no_id_share_targets">No apps were found on your device to share the ID with</string>
    <string name="app_snack_error_add_friend">Unable to add friend; please try again</string>
    <string name="app_snack_error_account_version_conflict">Unable to upload account data due to a version conflict</string>
    <string name="app_snack_error_account_sync">Unable to synchronized account details from Kakapo server</string>
    <string name="app_snack_error_blacklist_author">Adding user to blacklist failed; please try again</string>
    <string name="app_snack_error_account_serialization_failed">An error occurred while writing account data; please try again.</string>
    <string name="app_snack_account_restore_complete">Account details have been updated from the Kakapo server</string>
    <string name="app_text_try_again">Try again</string>
    <string name="app_text_done">Done</string>
    <string name="app_text_load_more">Load more</string>
    <string name="app_text_ignored_response">[ignored - tap to show]</string>
    <string name="app_text_deleted_response">[deleted]</string>
    <string name="app_text_deleted_item">[deleted]</string>
    <string name="app_text_pronoun_me_mixed_case">Me</string>
    <string name="app_text_pronoun_me_lower_case">me</string>
    <string name="app_text_pronoun_stranger_mixed_case">A stranger</string>
    <string name="app_text_pronoun_stranger_lower_case">a stranger</string>
    <string name="app_text_avatar_letter_stranger">\?</string>
    <string name="app_text_unignore_author">Unignore author</string>
    <string name="app_text_ignore_author">Ignore author</string>
    <string name="app_text_unignore_item">Unignore item</string>
    <string name="app_text_ignore_item">Ignore item</string>
    <string name="app_text_unignore_reply">Unignore reply</string>
    <string name="app_text_ignore_reply">Ignore reply</string>
    <string name="app_text_queued_item">Queued for upload</string>
    <string name="main_action_sign_out">Sign out</string>
    <string name="main_snack_sharing_account">Exporting account data, please wait.</string>
    <string name="main_toast_item_submission_failed">Upload of your new item failed.</string>
    <string name="main_toast_item_submission_success">Your item has been successfully uploaded</string>
    <string name="fragment_me_title">Me</string>
    <string name="fragment_me_snack_deletion_in_progress">Your account is being deleted, please wait&#8230;</string>
    <string name="fragment_me_snack_backup_in_progress">Account backup in progress, please wait&#8230;</string>
    <string name="fragment_me_snack_no_backup_share_apps">There are no apps on your device that are capable of handling your backup file</string>
    <string name="fragment_me_snack_error_creating_backup">Unable to create backup; please try again.</string>
    <string name="fragment_me_label_my_id">My ID</string>
    <string name="fragment_me_label_colour">Colour</string>
    <string name="fragment_me_label_my_quota">My quota</string>
    <string name="fragment_me_label_queued_items">Queued items</string>
    <string name="fragment_me_label_no_queued_items">No queued items</string>
    <string name="fragment_me_quota_description_calculating">Calculating quota&#8230;</string>
    <string name="fragment_me_quota_description">%1$dMB of %2$dMB used</string>
    <string name="fragment_me_quota_unable">Unable to fetch quota from server</string>
    <string name="fragment_me_action_delete_from_device">Delete account from device</string>
    <string name="fragment_me_action_delete_from_server">Delete account from server</string>
    <string name="fragment_me_action_share_id">Share your ID</string>
    <string name="fragment_me_action_share_id_as_qr_code">Share my ID as QR Code</string>
    <string name="fragment_me_action_share_id_as_text">Share my ID as text</string>
    <string name="fragment_me_action_share_account_as_qr_code">Share my account as QR Code</string>
    <string name="fragment_me_action_share_account_as_text">Share my account as text</string>
    <string name="fragment_me_action_delete_account">Delete account</string>
    <string name="fragment_me_action_rename_account">Rename account</string>
    <string name="fragment_me_toast_account_deleted_from_server">The account has been deleted from the server.</string>
    <string name="fragment_me_toast_account_deleted_from_device">The account has been deleted from your device.</string>
    <string name="fragment_me_title_share_backup_file">Backup account with</string>
    <string name="fragment_me_queued_item_row_creation_date">Created on %1$s</string>
    <string name="fragment_me_menu_resubmit_queued_item">Resubmit</string>
    <string name="fragment_me_menu_delete_queued_item">Delete</string>
    <string name="fragment_me_item_error_item_serialization_failed">An error occurred while preparing the item for encryption; please resubmit.</string>
    <string name="fragment_me_item_error_item_encryption_failed">Encryption failed; please resubmit.</string>
    <string name="fragment_me_item_error_unauthorized">The supplied credentials are not valid; please resubmit. If failures persist, sign out and back in and try again.</string>
    <string name="fragment_me_item_error_server_unavailable">The Kakapo server is currently unavailable. Please try again in a few minutes.</string>
    <string name="fragment_me_item_error_retrofit_io_exception">An error occurred while communicating with the Kakapo server. Please try again in a few minutes.</string>
    <string name="fragment_me_item_error_too_many_requests">You have made too many server requests; please wait a moment and resubmit.</string>
    <string name="fragment_me_item_error_payload_too_large">The attached file is too large; please reduce the size and resubmit.</string>
    <string name="fragment_me_item_error_other_http_error">A communication error occurred with the server; please resubmit.</string>
    <string name="fragment_me_snack_error_account_upload_encrypt_failed">An error occurred while encrypting the account data. Please try again.</string>
    <string name="fragment_me_snack_quota_exceeded">Uploading this item will exceed your quota; please delete some of your shares and try again.</string>
    <string name="fragment_me_snack_error_account_upload_payload_too_large">Account size exceeds maximum; account upload failed.</string>
    <string name="fragment_me_parent_item_not_found">The item this is a response to was not found.</string>
    <string name="fragment_me_fetch_prekeys_failed">Unable to fetch encryption prekeys for the following recipients: %1$s. \n\nEither remove them from the list of recipients or wait until they connect to Kakapo and provide additional prekeys.</string>
    <string name="fragment_friends_title">Friends</string>
    <string name="fragment_friends_label_no_friends">You have no friends (sorry).\n\nTo add friends, tap the add button.\n\nYou can add friends by scanning their QR code or by copying their ID to the clipboard.</string>
    <string name="fragment_friends_snack_friend_successfully_added">Friend added successfully</string>
    <string name="fragment_friends_snack_error_duplicate_friend_id">You already have a friend with this ID.</string>
    <string name="fragment_friends_snack_add_friend_in_progress">Adding friend, please wait&#8230;</string>
    <string name="fragment_friends_snack_nothing_in_clipboard">The clipboard does not appear to contain a user ID</string>
    <string name="fragment_friends_snack_error_guid_not_found">No user found with the specified ID.</string>
    <string name="fragment_friends_action_add_from_qr_code">Add friend from QR code</string>
    <string name="fragment_friends_action_add_from_clipboard">Add friend from clipboard</string>
    <string name="fragment_friends_action_add_from_keyboard">Add friend manually</string>
    <string name="fragment_groups_title">Groups</string>
    <string name="fragment_groups_label_friend_count_in_group">%1$d friend(s) in this group</string>
    <string name="fragment_news_action_filter_news">Filter news</string>
    <string name="fragment_news_action_filter_news_mine">Mine</string>
    <string name="fragment_news_action_filter_news_friends">Friends</string>
    <string name="fragment_news_action_filter_news_strangers">Strangers</string>
    <string name="fragment_news_action_filter_news_deleted">Deleted</string>
    <string name="fragment_news_action_filter_news_ignored">Ignored</string>
    <string name="restore_account_label_backup_date">Backup date</string>
    <string name="restore_account_label_account_id">Account ID</string>
    <string name="restore_account_label_account_name">Account name</string>
    <string name="restore_account_label_groups">Groups</string>
    <string name="restore_account_label_friends">Friends</string>
    <string name="friend_detail_label_friend_id">ID</string>
    <string name="friend_detail_label_colour">Colour</string>
    <string name="friend_detail_label_groups">Member of group(s)</string>
    <string name="friend_detail_label_no_groups">You have no groups.</string>
    <string name="friend_detail_action_share_friend_id">Share this friends ID</string>
    <string name="friend_detail_action_share_id_as_qr_code">Share as QR code</string>
    <string name="friend_detail_action_share_id_as_text">Share as text</string>
    <string name="friend_detail_action_rename_friend">Rename friend</string>
    <string name="friend_detail_action_delete_friend">Delete friend</string>
    <string name="share_item_action_send">Send</string>
    <string name="share_item_action_delete">Delete</string>
    <string name="item_detail_action_ignore">Ignore</string>
    <string name="item_detail_action_ignore_author">Ignore author</string>
    <string name="item_detail_action_ignore_item">Ignore item</string>
    <string name="item_detail_action_delete">Delete</string>
    <string name="item_detail_action_reply">Reply</string>
    <string name="item_detail_action_add_friend">Add friend</string>
    <string name="dialog_share_account_title">Share Account</string>
    <string name="dialog_share_account_description">On your other device tap the \'Add account from another device\' button from the \'Sign in/sign up\' screen, and scan the QR code shown below.</string>
    <string name="dialog_confirm_text_dont_ask_again">Don\'t ask me this again</string>
    <string name="dialog_confirm_text_no">No</string>
    <string name="dialog_confirm_text_yes">Yes</string>
    <string name="item_detail_action_blacklist_author">Blacklist author</string>
</resources>