<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.aptasystems.kakapo.SelectUserAccountActivity">

    <item
        android:id="@+id/action_delete_news_item"
        android:orderInCategory="100"
        android:title="@string/app_action_delete"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_add_friend"
        android:orderInCategory="110"
        android:title="@string/app_action_add_friend"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_ignore_author"
        android:orderInCategory="110"
        android:title="@string/app_action_ignore_author"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_ignore_item"
        android:orderInCategory="120"
        android:title="@string/app_action_ignore_item"
        app:showAsAction="ifRoom"/>

</menu>
