<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

<!--    <item-->
<!--        android:id="@+id/action_share"-->
<!--        android:icon="@drawable/baseline_share_24"-->
<!--        android:orderInCategory="100"-->
<!--        android:title="@string/friend_detail_action_share_friend_id"-->
<!--        app:showAsAction="always">-->
<!--        <menu>-->
<!--            <item-->
<!--                android:onClick="shareIdAsQrCode"-->
<!--                android:orderInCategory="100"-->
<!--                android:title="@string/friend_detail_action_share_id_as_qr_code"-->
<!--                app:showAsAction="ifRoom"/>-->
<!--            <item-->
<!--                android:onClick="shareIdAsText"-->
<!--                android:orderInCategory="110"-->
<!--                android:title="@string/friend_detail_action_share_id_as_text"-->
<!--                app:showAsAction="ifRoom"/>-->
<!--        </menu>-->
<!--    </item>-->

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/baseline_delete_24"
        android:orderInCategory="90"
        android:title="@string/item_detail_action_delete"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_add_friend"
        android:icon="@drawable/baseline_person_add_24"
        android:orderInCategory="100"
        android:title="@string/item_detail_action_add_friend"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_ignore"
        android:icon="@drawable/baseline_not_interested_24"
        android:orderInCategory="105"
        android:title="@string/item_detail_action_ignore"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_ignore_author"
                android:orderInCategory="110"
                android:title="@string/item_detail_action_ignore_author"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/action_ignore_item"
                android:orderInCategory="120"
                android:title="@string/item_detail_action_ignore_item"
                app:showAsAction="ifRoom"/>

            <item
                android:id="@+id/action_blacklist_author"
                android:orderInCategory="130"
                android:title="@string/item_detail_action_blacklist_author"
                app:showAsAction="ifRoom"/>

        </menu>
    </item>

    <item
        android:id="@+id/action_reply"
        android:icon="@drawable/baseline_reply_24"
        android:orderInCategory="110"
        android:title="@string/item_detail_action_reply"
        app:showAsAction="always"/>

    <!--    <item-->
<!--        android:id="@+id/action_delete"-->
<!--        android:icon="@drawable/baseline_delete_24"-->
<!--        android:orderInCategory="110"-->
<!--        android:title="@string/friend_detail_action_delete_friend"-->
<!--        android:onClick="deleteFriend"-->
<!--        app:showAsAction="always"/>-->

</menu>