<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.aptasystems.kakapo.ShareItemActivity">

    <item
        android:id="@+id/action_help"
        android:icon="@drawable/baseline_help_outline_24"
        android:onClick="showHelp"
        android:orderInCategory="80"
        android:title="@string/app_action_help"
        app:showAsAction="always" />

    <!--<item-->
    <!--android:id="@+id/action_sign_out"-->
    <!--android:icon="@drawable/baseline_exit_to_app_24"-->
    <!--android:onClick="signOut"-->
    <!--android:orderInCategory="150"-->
    <!--android:title="@string/main_action_sign_out"-->
    <!--app:showAsAction="ifRoom"/>-->

    <item
        android:id="@+id/action_delete_share"
        android:icon="@drawable/baseline_delete_24"
        android:onClick="deleteShare"
        android:orderInCategory="90"
        android:title="@string/share_item_action_delete"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_send"
        android:icon="@drawable/baseline_send_24"
        android:onClick="submit"
        android:orderInCategory="100"
        android:title="@string/share_item_action_send"
        app:showAsAction="ifRoom" />

</menu>
