<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".FriendDetailActivity"
    android:orientation="vertical"
    tools:showIn="@layout/activity_friend_detail">

    <!--Friend ID-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/friend_detail_label_friend_id"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <TextView
        android:id="@+id/friend_guid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <!--Colour-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/friend_detail_label_colour"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <ImageView
        android:id="@+id/avatar_colour_swatch"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="4dp"
        android:background="?android:selectableItemBackground"
        android:src="@drawable/avatar_circle"/>

    <!--Groups-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/friend_detail_label_groups"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

    <ListView
        android:id="@+id/friend_groups_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/empty_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="top|start"
        android:text="@string/friend_detail_label_no_groups"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:visibility="gone"/>

</LinearLayout>